<resources>
    <string name="app_name" translatable="false">Maipets</string>
    <string name="start">START</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="loginLabel">LOGIN</string>
    <string name="RegisterLabel">REGISTER</string>
    <string name="userName">Name</string>
    <string name="userApe">Surname</string>
    <string name="regPass">Password</string>
    <string name="regConfPass">Password again</string>
    <string name="cancel">CANCEL</string>
    <string name="RegText">Please, fill all the fields</string>
    <string name="e_empty">Error. Please fill al the fields</string>
    <string name="e_pass">Error. Passwords is not equals</string>
    <string name="e_register">Register error!</string>
    <string name="log_nok">Login error!</string>
    <string name="ok_register">Registered!</string>
    <string name="log_ok">Correct login!</string>
    <string name="label_logout">Logout</string>
    <string name="noReg">Register cancelled</string>
    <string name="mascName">Pet\'s Name</string>
    <string name="mascTipo">Pet\'s Specie</string>
    <string name="mascRaza">Pet\'s Race</string>
    <string name="mascCol">Pet\'s Color</string>
    <string name="mascFec">Pet\'s birthdate</string>
    <string name="add">ADD</string>
    <string name="ok_addMasc">Pet added!</string>
    <string name="noAddMasc">Adding pet cancelled!</string>
    <string name="action_c">Share</string>
    <string name="action_s">Search</string>
    <string name="share">Share</string>
    <string name="no_add">Pet not added</string>
    <string name="edit_masc">Edit</string>
    <string name="del_masc">Delete</string>
    <string name="perf">User info</string>
    <string name="textPet">Pets</string>
    <string name="del_prof">Delete profile</string>
    <string name="ed_prof">Save profile</string>
    <string name="save_ok">Saved!</string>
    <string name="vetName">Veterinary\'s Name</string>
    <string name="vetDir">Adress</string>
    <string name="vetCiu">City</string>
    <string name="vetTel">Telephone</string>
    <string name="vetCart">Veterinary</string>
    <string name="editMasc">Edit Pet Values</string>
    <string name="editName">Name</string>
    <string name="editType">Type</string>
    <string name="editRace">Specie</string>
    <string name="editColor" translatable="false">Color</string>
    <string name="editDate">Birthdate</string>
    <string name="UpdateBoton">UPDATE</string>
    <string name="cancelUpdate">CANCEL</string>
    <string name="addM">ADD PET</string>
</resources>
