<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6E8D5"
    tools:context=".ModiMascota">

    // Imagen superior
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/maipets_logo" />

    // Cabecera
    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/editMasc"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    //Nombre
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editName"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:hint="@string/editName"
        android:textColor="#1A72B8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/mascName"
        android:textColor="#99000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        app:layout_constraintVertical_bias="0.65" />

    //Especie
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editEspecie"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/editRace"
        android:textColor="#1A72B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/textEspecie"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/mascTipo"
        android:textColor="#99000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editEspecie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        app:layout_constraintVertical_bias="0.533" />


    //Raza
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editRaza"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/editType"
        android:textColor="#1A72B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEspecie" />

    <TextView
        android:id="@+id/textRaza"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/mascRaza"
        android:textColor="#99000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editRaza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEspecie"
        app:layout_constraintVertical_bias="0.466" />

    //Color
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editColor"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/editColor"
        android:textColor="#1A72B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRaza" />

    <TextView
        android:id="@+id/textColor"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/mascCol"
        android:textColor="#99000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRaza" />


    // Fecha
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editFecha"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/editDate"
        android:textColor="#1A72B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editColor" />

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/mascFec"
        android:textColor="#99000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editColor" />

    // Botones
    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/UpdateBoton"
        app:backgroundTint="#47B60F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFecha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancelUpdate"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/botonActualizar"
        app:layout_constraintTop_toBottomOf="@+id/editFecha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>


</androidx.constraintlayout.widget.ConstraintLayout>